tests/snapshots/snapshots__compile_snapshots@enum_generic_types.zts.snap
---
source: tests/snapshots.rs
expression: out.code
input_file: tests/fixtures/enum_generic_types.zts
---
import { __ztsAbsurd } from "@zestty/core";
type Tree = {
    readonly kind: "Leaf";
    readonly value: number;
} | {
    readonly kind: "Node";
    readonly left: Tree;
    readonly right: Tree;
    readonly tags: string[];
};
const Tree = {
    Leaf: (value: number): Tree =>({
            kind: "Leaf",
            value
        }),
    Node: (left: Tree, right: Tree, tags: string[]): Tree =>({
            kind: "Node",
            left,
            right,
            tags
        })
};
declare const t: Tree;
function sum(tree: Tree): number {
    return ((__m)=>{
        const __k = __m.kind;
        if (__k === "Leaf") {
            const { value } = __m;
            return value;
        }
        if (__k === "Node") {
            const { left, right } = __m;
            return sum(left) + sum(right);
        }
        return __ztsAbsurd(__k);
    })(tree);
}
console.log(sum(t));
