tests/snapshots/snapshots__compile_snapshots@if_expr_multi_stmt.zts.snap
---
source: tests/snapshots.rs
expression: out.code
input_file: tests/fixtures/if_expr_multi_stmt.zts
---
declare const n: number;
declare function expensive(x: number): number;
const result = (()=>{
    if (n > 0) {
        const cached = expensive(n);
        return cached * 2;
    }
    return 0;
})();
const chained: string = (()=>{
    if (n > 100) {
        const s = `${n}`;
        return s + "!";
    }
    if (n > 10) {
        return "mid";
    }
    const neg = -n;
    return `${neg}`;
})();
console.log(result, chained);
